--- a/content/docs/404.md
+++ b/content/docs/404.md
@@ -1,9 +1,10 @@
 ---
-title: Deadlink
+title: Documentation 404
 ---
 
-Hello, you've reched a dead link in the documentation. Sorry for the inconvenience! We've retired an old page from Lumberyard 1.x
-and haven't come up with a suitable replacement for Open 3D Engine yet. In order to get this resolved, please file a
+Nobody here but us chickens!
+
+If you've reached this page in error (like from a search result or internal link), then please file a
 [GitHub Issue](https://github.com/o3de/o3de.org/issues). Make sure you:
 
 * Check to see if a ticket already exists for the page you tried to reach
