--- a/content/docs/learning-guide/tutorials/engine/components/6.md
+++ b/content/docs/learning-guide/tutorials/engine/components/6.md
@@ -31,11 +31,7 @@ In the following procedure, you must build the editor so that you can view your 
 1. In a command\-line window, enter the following commands to build the editor\.
 
    ```
-   lmbr_waf configure
-   ```
-
-   ```
-   lmbr_waf build_win_x64_vs2017_profile -p all
+   cmake --build <CMake build dir>  --config profile --target Editor -- /m
    ```
 
 1. After your build succeeds, open O3DE Editor and choose or create a level\.
