Remove links to AWS sites (more of them.)
Signed-off-by: Stephen Tramer <169061+sptramer@users.noreply.github.com>

--- a/content/docs/learning-guide/tutorials/engine/components/4.md
+++ b/content/docs/learning-guide/tutorials/engine/components/4.md
@@ -1,5 +1,5 @@
 ---
-description: ' Add shortcuts for your component in Open 3D Engine. '
+description:  Add shortcuts for your component in Open 3D Engine. 
 title: 'Step 4: Add Shortcuts for Component Mode'
 ---
 
